<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="tokyo.olt.newsupdate.MainActivity">
    <item
        android:id="@+id/action_0"
        android:orderInCategory="100"
        android:title="@string/action_0"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_1"
        android:orderInCategory="100"
        android:title="@string/action_1"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_2"
        android:orderInCategory="100"
        android:title="@string/action_2"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_3"
        android:orderInCategory="100"
        android:title="@string/action_3"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_4"
        android:orderInCategory="100"
        android:title="@string/action_4"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_5"
        android:orderInCategory="100"
        android:title="@string/action_5"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_6"
        android:orderInCategory="100"
        android:title="@string/action_6"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_7"
        android:orderInCategory="100"
        android:title="@string/action_7"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_8"
        android:orderInCategory="100"
        android:title="@string/action_8"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_9"
        android:orderInCategory="100"
        android:title="@string/action_9"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_10"
        android:orderInCategory="100"
        android:title="@string/action_10"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_11"
        android:orderInCategory="100"
        android:title="@string/action_11"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_12"
        android:orderInCategory="100"
        android:title="@string/action_12"
        app:showAsAction="never" />
</menu>
